--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="/index.html"> <img src="./images/logo.svg" alt="logotype" />Appello</a>
+      <a href="./index.html"> <img src="./images/logo.svg" alt="logotype" />Appello</a>
       <nav>
         <ul>
           <li><a href="">Home</a></li>
